@@ -1,6 +1,6 @@
 ## libraries to build 
 ## $Id$
-libraries = swift,savant,simpletest,minify,openID,pomo,useo2,sfYaml
+libraries = swift,savant,simpletest,minify,openID,pomo,useo2
 
 ## strip
 libraries.strip = true
@@ -60,11 +60,3 @@ library.useo2.sourceDir = ../libs/ultimate_seo_urls_2-110/
 library.useo2.targetDir = plugins/useo2/
 ## non core packer need to be added to classpath manually
 library.useo2.classpath = ${zenmagick.src.dir}/${library.useo2.targetDir}etc
-
-## sfYaml
-library.sfYaml.version = 1.0.2
-library.sfYaml.class = ZMSfYamlPacker
-library.sfYaml.sourceDir = ../libs/yaml/
-library.sfYaml.targetDir = lib/core/external/
-## non core packer need to be added to classpath manually
-library.sfYaml.classpath =
